--- a/docker-compose-simple.yml
+++ b/docker-compose-simple.yml
@@ -10,7 +10,7 @@ x-airflow-common:
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
-    _PIP_ADDITIONAL_REQUIREMENTS: 'sdmx1 pandas papermill ipykernel jupyter'
+    _PIP_ADDITIONAL_REQUIREMENTS: 'sdmx1==2.22.0 pandas==2.3.2 papermill ipykernel jupyter'
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}/airflow/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/airflow/logs:/opt/airflow/logs
