--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,39 @@
+# ==============================================
+# Core Data Processing Dependencies
+# ==============================================
 sdmx1==2.22.0
-pandas==2.3.2
+pandas==2.2.2
+numpy==1.26.4
+
+# ==============================================
+# Big Data & Spark Dependencies
+# ==============================================
+pyspark==3.5.1
+pyarrow==15.0.2
+findspark==2.0.1
+
+# ==============================================
+# Jupyter & Analysis Dependencies (Minimal)
+# ==============================================
+ipykernel==6.29.5
+nbclient==0.10.2
+papermill==2.6.0
+
+# ==============================================
+# Visualization Dependencies
+# ==============================================
+matplotlib==3.8.4
+seaborn==0.13.2
+
+# ==============================================
+# Database Connectors
+# ==============================================
+psycopg2-binary==2.9.9
+sqlalchemy==1.4.53
+
+# ==============================================
+# Utility Dependencies
+# ==============================================
+requests==2.32.3
+python-decouple==3.8
+loguru==0.7.2
