--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ x-airflow-common: &airflow-common
     - ${AIRFLOW_PROJ_DIR:-.}/Resultados:${AIRFLOW_HOME}/Resultados
     - ${AIRFLOW_PROJ_DIR:-.}/spark_config:${AIRFLOW_HOME}/spark_config
     - ${AIRFLOW_PROJ_DIR:-.}/notebooks:${AIRFLOW_HOME}/notebooks
+    - ${AIRFLOW_PROJ_DIR:-.}/silver:${AIRFLOW_HOME}/silver
   depends_on: &airflow-common-depends-on
     postgres:
       condition: service_healthy
