feat: implementa postgres

--- a/.env
+++ b/.env
@@ -21,6 +21,11 @@ POSTGRES_DB=airflow
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5433
 
+# Data Warehouse Configuration
+POSTGRES_DW_DB=data_warehouse
+POSTGRES_DW_USER=dw_user
+POSTGRES_DW_PASSWORD=dw_password
+
 # ==============================================
 # SPARK CONFIGURATION
 # ==============================================
