--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
+      - ./postgres:/docker-entrypoint-initdb.d
     ports:
       - "5433:5432"
     healthcheck:
