--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+site/
+docs/site/
 # ==============================================
 # TrabalhoSBD2 - .gitignore
 # ==============================================
