--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ x-airflow-common: &airflow-common
     - ${AIRFLOW_PROJ_DIR:-.}/airflow/config:${AIRFLOW_HOME}/config
     - ${AIRFLOW_PROJ_DIR:-.}/airflow/plugins:${AIRFLOW_HOME}/plugins
     - ${AIRFLOW_PROJ_DIR:-.}/data_layer:${AIRFLOW_HOME}/data_layer
+    - ${AIRFLOW_PROJ_DIR:-.}/transformer:${AIRFLOW_HOME}/transformer
     - ${AIRFLOW_PROJ_DIR:-.}/spark_config:${AIRFLOW_HOME}/spark_config
     - ${AIRFLOW_PROJ_DIR:-.}/notebooks:${AIRFLOW_HOME}/notebooks
     - ${AIRFLOW_PROJ_DIR:-.}/postgres:${AIRFLOW_HOME}/postgres
